Actualizando index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<link rel="stylesheet" href="cyberpunk.css">
+<link rel="stylesheet" href="main/cyberpunk css_files/cyberpunk.css">
 
 <html><head><meta http-equiv="Content-Type" content="text/html/images; charset=UTF-8"
       
@@ -14,8 +14,8 @@
          <meta property="og:locale" content="es">
          <meta property="og:type" content="website">
         
-         <link rel="stylesheet" href="cyber-grid.css">
-         <link rel="stylesheet" href="style.css">
+         <link rel="stylesheet" href="main/cyberpunk css_files/cyber-grid.css">
+         <link rel="stylesheet" href="main/cyberpunk css_files/style.css">
 
          <link rel="icon" type="image/png" href="https://files.catbox.moe/bgvzz1.png" sizes="2400 × 2285">
 
