--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 
-<link rel="stylesheet" href="main/cyberpunk css_files/cyberpunk.css">
+<link rel="stylesheet" href="GuardiaBugambilia.github.io/cyberpunk css_files/cyberpunk.css">
 
 <html><head><meta http-equiv="Content-Type" content="text/html/images; charset=UTF-8"
       
 
          <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" lang="es">
-         <meta property="og:site_name" content="Guardia-bugambilias">
-         <meta property="og:title" content="Guardia-bugambilias">
+         <meta property="og:site_name" content="Guardiabugambilia">
+         <meta property="og:title" content="Guardiabugambilia">
          <meta property="og:description" content="Love for a better future">
-         <meta property="og:url" content="https://x.x.x">
+         <meta property="og:url" content="https://GuardiaBugambilia.github.io">
          <meta property="og:image" itemprop="image" content="https://files.catbox.moe/thd7hi.webp">
          <meta property="og:locale" content="es">
          <meta property="og:type" content="website">
         
-         <link rel="stylesheet" href="main/cyberpunk css_files/cyber-grid.css">
-         <link rel="stylesheet" href="main/cyberpunk css_files/style.css">
+         <link rel="stylesheet" href="GuardiaBugambilia.github.io/cyberpunk css_files/cyber-grid.css">
+         <link rel="stylesheet" href="GuardiaBugambilia.github.io/cyberpunk css_files/style.css">
 
          <link rel="icon" type="image/png" href="https://files.catbox.moe/bgvzz1.png" sizes="2400 × 2285">
 
