--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 
 
 
-<html><head> <meta http-equiv="Content-Type" content="text/html/images; charset=UTF-8">
+<html><head> 
+<meta http-equiv="Content-Type" content="text/html/images; charset=UTF-8">
       
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" lang="es"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" lang="es"/>
          
          <meta property="og:site_name" content="Guardiabugambilia"/>
          <meta property="og:title" content="Guardiabugambilia">
