--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
          <link rel="stylesheet" href="cyberpunk css_files/style.css">
          <link rel="stylesheet" href="cyberpunk css_files/cyberpunk.css">
          <link rel="icon" type="image/png" href="https://files.catbox.moe/bgvzz1.png" sizes="2400 × 2285">
-
+<script src="catify.js"></script>
      <title>La Guardia de las Bugambilias</title>
 </head>
-<body style="background-color: rgb(0, 0, 0);">
+<body onload=catify(); style="background-color: rgb(0, 0, 0);">
 
     <div id="header" class="bg-purple fg-white cyber-razor-bottom pt-0 pl-8 pb-4">
         <span style="color: #d54ed3;"    class="cyberpunk-font f-x2-5">
