--- a/index.html
+++ b/index.html
@@ -33,14 +33,9 @@
 
     <div id="main" class="container">
         <div class="row">
-            <div class="col-1"> </div>
             <div class="col-10">
 
-             <h1 style="color: #ffffff;" class="cyber-h cyber-glitch-4">¿Cómo llegaste aqui?</h1>
-             <p style="color: #ffffff;">
-             Pronto habra algo más por aquí<br>
-             </p>
- Aqui jalaRA? <br>
+             <h1 style="color: #ffffff;" class="cyber-h cyber-glitch-4">Sean bienvenid@s</h1>
              <p class="cyber-att">
             ATENCION <br>GRACIAS POR SU ATENCION
              </p>
