--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
              <h1 style="color: #ffffff;" class="cyber-h cyber-glitch-4">Sean bienvenid@s</h1>
              <p class="cyber-att">
-            ATENCION <br>GRACIAS POR SU ATENCION
+            Si alguna vez has sentido la incertidumbre de no saber si el gobierno podría ilegalizar tu exiwstencia mañana, que la gente no podrá cambiar nunca su mentalidad estas en el lugar correcto.
              </p>
              </div>
         </div>
